--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@floating-ui/react": "^0.26.25",
+    "@headlessui/react": "^2.1.10",
+    "@material-tailwind/react": "^2.1.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.5.2",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
@@ -40,7 +45,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "eslint": "^8.57.1",
+    "eslint-webpack-plugin": "^4.2.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
