--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -7,6 +7,7 @@
     "@floating-ui/react": "^0.26.25",
     "@headlessui/react": "^2.1.10",
     "@material-tailwind/react": "^2.1.10",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
